--- a/inovation/inovate_project/requirements.txt
+++ b/inovation/inovate_project/requirements.txt
@@ -1,8 +1,7 @@
-asgiref==3.2.5
-beautifulsoup4==4.9.0
-Django==3.0.4
-django-bootstrap4==1.1.1
+Django==2.2.9
 pytz==2019.3
-soupsieve==2.0
 sqlparse==0.3.1
-gunicorn==19.9.0
+psycopg2
+gunicorn
+dj-database-url
+whitenoise
